# model-context-protocal

./: README.md  client.py  env_template.txt  pyproject.toml  test.py  test_server.py
server/: api_config.py  erp_api_server.py  erp_database.py  weather.py
